--- a/dictionary-frontend/src/index.css
+++ b/dictionary-frontend/src/index.css
@@ -9,7 +9,7 @@ body {
   padding-top: 0;
 }
 
-h1 {
+h1,h3 {
   text-align: center;
   margin-bottom: 20px;
 }
@@ -66,4 +66,21 @@ code {
   background-color: #eee;
 }
 
+.directions {
+  margin-top: 15px;
+  margin-bottom: 15px;
+  margin-left: auto;
+  margin-right: auto;
+  width: 90%;
+  max-width: 750px;
+  
+}
 
+.directions-title {
+  padding-bottom: 5px;
+  padding-top: 10px;
+}
+
+.directions-body {
+  padding-top: 15px;
+}
