--- a/dictionary-frontend/src/index.css
+++ b/dictionary-frontend/src/index.css
@@ -9,14 +9,24 @@ body {
   padding-top: 0;
 }
 
-h1,h3 {
+h1 {
   text-align: center;
-  margin-bottom: 20px;
+  margin-bottom: 15px;
+}
+
+h3 {
+  text-align: center;
+  margin-bottom: 0px;
+  margin-top: 0px;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
+}
+
+.arrow-section {
+  margin-bottom: 25px;
 }
 
 .navbar {
@@ -31,6 +41,7 @@ code {
   padding: 5px;
   border-style: solid;
   border-color: #888;
+  border-radius: .25rem;
 }
 
 .dictionary-selection {
@@ -83,4 +94,8 @@ code {
 
 .directions-body {
   padding-top: 15px;
+}
+
+.sample-search-button {
+  margin-left: 15px;
 }
