--- a/dictionary-frontend/src/index.css
+++ b/dictionary-frontend/src/index.css
@@ -53,22 +53,24 @@ code {
 
 .single-result {
   margin-top: 0;
-  margin-bottom: 0px;
+  margin-bottom: 5px;
   margin-left: auto;
   margin-right: auto;
-  width: 90%;
+  width: 100%;
   max-width: 750px;
   padding: 0;
 }
 
 .single-dictionary {
-  margin-top: 15px;
-  margin-bottom: 5px;
+  margin-top:0;
+  margin-bottom: 0;
   margin-left: auto;
   margin-right: auto;
-  width: 90%;
+  width: 100%;
   max-width: 750px;
-  padding:0;
+  padding-top:5px;
+  padding-left:5px;
+  padding-right:5px;
 }
 
 .gh-button {
@@ -98,4 +100,6 @@ code {
 
 .sample-search-button {
   margin-left: 15px;
+  margin-top: 5px;
+  margin-bottom: 5px;
 }
