--- a/dictionary-frontend/src/index.css
+++ b/dictionary-frontend/src/index.css
@@ -20,6 +20,10 @@ h3 {
   margin-top: 0px;
 }
 
+h5 {
+  display: inline-block;
+}
+
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
@@ -102,4 +106,11 @@ code {
   margin-left: 15px;
   margin-top: 5px;
   margin-bottom: 5px;
+}
+
+.demo-mode-title {
+  width: 95%;
+}
+.demo-min-symbol {
+  width: 5%;
 }
