--- a/dictionary-frontend/src/index.css
+++ b/dictionary-frontend/src/index.css
@@ -1,3 +1,11 @@
+* {
+  box-sizing: border-box;
+ }
+ *:before,
+ *:after {
+  box-sizing: border-box;
+ }
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
@@ -6,7 +14,9 @@ body {
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   background-color: #dbe2ef;
+  /* background-color: #e7dfd5; */
   padding-top: 0;
+  position: relative;
 }
 
 h1 {
@@ -44,8 +54,10 @@ code {
   max-width: 750px;
   padding: 5px;
   border-style: solid;
+  border-width: 2px;
   border-color: #888;
   border-radius: .25rem;
+  background-color: #f2f3f4;
 }
 
 .dictionary-selection {
@@ -80,7 +92,6 @@ code {
 .gh-button {
   margin: 5px 5px 10px;
   width: 150px;
-  background-color: #eee;
 }
 
 .directions {
@@ -90,7 +101,6 @@ code {
   margin-right: auto;
   width: 90%;
   max-width: 750px;
-  
 }
 
 .directions-title {
@@ -99,7 +109,8 @@ code {
 }
 
 .directions-body {
-  padding-top: 15px;
+  margin: 5px;
+  background-color:#f2f3f4;
 }
 
 .sample-search-button {
@@ -114,3 +125,27 @@ code {
 .demo-min-symbol {
   width: 5%;
 }
+
+.footer {
+  position: absolute;
+  bottom:0;
+  width:100%;
+  margin-bottom: 0px;
+  padding-bottom: 0px;
+  padding-top: 10px;
+  text-align: center;
+  background-color: #343a40;
+}
+
+.copyright {
+  color: white;
+  margin-top:5px;
+}
+
+.content {
+  min-height: 100vh; 
+  overflow: hidden;
+  display: block;
+  position: relative;
+  padding-bottom: 150px; 
+ }
